--- a/style.css
+++ b/style.css
@@ -244,6 +244,8 @@ body {
 .beneficios .beneficios__info h1 {
   text-align: center;
   color: #ff6900;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
 }
 
 .beneficios .beneficios__info .beneficios__info-textLogo {
@@ -267,6 +269,7 @@ body {
   width: 92.5%;
   margin: 0.5rem auto;
   text-align: justify;
+  font-family: 'Poppins', sans-serif;
 }
 
 .beneficios .beneficios__info .beneficios__info-textLogo .beneficios__info-text .title {
@@ -279,6 +282,45 @@ body {
 
 .beneficios .figure {
   display: none;
+}
+
+
+/*______________________________ Sección de cuida tu salud ______________________________*/
+.cuidaSalud {
+  background-color: #ffffff77; /* Quitar al final */
+  font-family: 'Poppins', sans-serif;
+}
+
+.cuidaSalud h3 {
+  color: #ff6900;
+  width: 97.5%;
+  margin: 0 auto 1rem;
+  text-align: center;
+}
+
+.cuidaSalud .cuidaSalud__info p {
+  width: 95%;
+  margin: 0 auto 1rem;
+  text-align: justify;
+}
+
+.cuidaSalud .cuidaSalud__info a {
+  background-color: #401c9a;
+  display: block;
+  width: 12.83rem;
+  height: 3.31rem;
+  line-height: 3.31rem;
+  text-align: center;
+  margin: 0 auto;
+  color: #fff;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 16.37pt;
+}
+
+.cuidaSalud .cuidaSalud__info a:hover {
+  background-color: #fff;
+  color: #401c9a;
 }
 
 /*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*
@@ -351,6 +393,7 @@ body {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-around;
+    position: relative;
   }
 
   .beneficios img {
@@ -363,7 +406,7 @@ body {
   }
 
   .beneficios .beneficios__info .beneficios__info-textLogo .beneficios__info-text p {
-    margin: 0 auto 1.25rem;
+    margin: 0 auto 1rem;
   }
 
   .beneficios .beneficios__info .beneficios__info-textLogo .beneficios__info-text p:last-child {
@@ -375,6 +418,41 @@ body {
     width: 19rem;
     position: absolute;
     left: -9.5rem;
-    bottom: -50rem;
+    top: 22.5rem;
+  }
+
+  /*______________________________ Sección de cuida tu salud ______________________________*/
+  .cuidaSalud {
+    width: 100%;
+    height: 26.31rem;
+    margin-top: 15rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+
+  .cuidaSalud h3 {
+    width: 27.5rem;
+    margin: 0;
+  }
+
+  .cuidaSalud .cuidaSalud__info {
+    background-color: #dcdcdc;/* Quitar al final */
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+  }
+
+  .cuidaSalud .cuidaSalud__info p {
+    background-color: #3b1d9f; /*Quitar al final*/
+    width: 24.85rem;
+    height: 9.5rem;
+    margin: 0;
+  }
+
+  .cuidaSalud .cuidaSalud__info a {
+    margin: 0;
   }
 }
