--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 /* Fuentes */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap');
-/* font-family: 'Montserrat', sans-serif; */
-/* font-family: 'Poppins', sans-serif; */
 
 * {
   margin: 0;
@@ -12,7 +10,7 @@
 
 body {
   width: 100%;
-  background-color: #000; /* Quitar al final */
+  overflow-x: hidden;
 }
 
 /*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*
@@ -23,7 +21,7 @@ body {
 .navBar {
   background-color: rgba(255, 255, 255, 0.62);
   width: 100%;
-  height: 8.51rem;
+  height: 5rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -35,8 +33,8 @@ body {
 
 .navBar img {
   display: block;
-  width: 7.26rem;
-  height: 7.26rem;
+  width: 4.5rem;
+  height: 4.5rem;
 }
 
 .navBar .menuCel {
@@ -122,7 +120,6 @@ body {
 
 /*______________________________ Header ______________________________*/
 .header {
-  background-color: #333;/* Quitar al final */
   width: 100%;
   height: 60vh;
 }
@@ -231,7 +228,6 @@ body {
 
 /*______________________________ Sección de beneficios ______________________________*/
 .beneficios {
-  background-color: #ffffff77;/* Quitar al final */
   margin-top: 2.5rem;
 }
 
@@ -287,7 +283,6 @@ body {
 
 /*______________________________ Sección de cuida tu salud ______________________________*/
 .cuidaSalud {
-  background-color: #ffffff77; /* Quitar al final */
   font-family: 'Poppins', sans-serif;
 }
 
@@ -323,6 +318,91 @@ body {
   color: #401c9a;
 }
 
+/*______________________________ Sección de cotiza ______________________________*/
+.cotiza {
+  margin-top: 3rem;
+}
+
+.cotiza img {
+  display: block;
+  width: 75%;
+  margin: 0 auto 2rem;
+}
+
+.cotiza .cotiza__info h3 {
+  width: 97.5%;
+  margin: 0 auto 2rem;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
+  color: #ff6900;
+}
+
+.cotiza .cotiza__info .cotiza__info-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.cotiza .cotiza__info .cotiza__info-container .cotiza__info-subContainer {
+  width: 47.5%;
+  height: 12.5rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.cotiza .cotiza__info .cotiza__info-container .cotiza__info-subContainer img {
+  display: block;
+  width: 5.5rem;
+}
+
+.cotiza .cotiza__info .cotiza__info-container .cotiza__info-subContainer p {
+  color: #525252;
+  text-align: center;
+}
+
+.cotiza .cotiza__info a {
+  background-color: #ff6900;
+  display: block;
+  width: 12.83rem;
+  height: 3.31rem;
+  text-align: center;
+  line-height: 3.31rem;
+  text-decoration: none;
+  color: #fff;
+  margin: 0 auto;
+}
+
+.cotiza .cotiza__info a:hover {
+  background-color: #fff;
+  color: #ff6900;
+}
+
+.cotiza .figura {
+  display: none;
+}
+
+
+/*______________________________ Footer ______________________________*/
+.footer {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 3rem;
+}
+
+.footer ul {
+  margin: 0 0.5rem;
+}
+
+.footer ul li {
+  list-style: none;
+}
+
+
+
 /*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*
   iPad View
 *_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*/
@@ -335,6 +415,15 @@ body {
 *_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*/
 @media screen and (min-width: 1000px) {
   /*______________________________ Barra de navegacion ______________________________*/
+  .navBar {
+    height: 8.51rem;
+  }
+
+  .navBar img {
+    width: 7.26rem;
+    height: 7.26rem;
+  }
+
   .navBar .menu {
     background-color: transparent;
     border: none;
@@ -438,7 +527,6 @@ body {
   }
 
   .cuidaSalud .cuidaSalud__info {
-    background-color: #dcdcdc;/* Quitar al final */
     width: 100%;
     display: flex;
     justify-content: space-evenly;
@@ -446,7 +534,6 @@ body {
   }
 
   .cuidaSalud .cuidaSalud__info p {
-    background-color: #3b1d9f; /*Quitar al final*/
     width: 24.85rem;
     height: 9.5rem;
     margin: 0;
@@ -454,5 +541,57 @@ body {
 
   .cuidaSalud .cuidaSalud__info a {
     margin: 0;
+  }
+
+
+  /*______________________________ Sección de cotiza ______________________________*/
+  .cotiza {
+    margin-top: 10rem;
+    display: flex;
+    height: 35rem;
+    align-items: center;
+    justify-content: space-evenly;
+    position: relative;
+  }
+
+  .cotiza img {
+    width: 38.5rem;
+    margin: 0;
+  }
+
+  .cotiza .cotiza__info {
+    margin-right: 10rem;
+  }
+
+  .cotiza .cotiza__info h3 {
+    width: 27.5rem;
+    margin: 0;
+  }
+
+  .cotiza .cotiza__info .cotiza__info-container {
+    width: 27.5rem;
+  }
+
+  .cotiza .cotiza__info .cotiza__info-container .cotiza__info-subContainer {
+    width: 10rem;
+    height: 10rem;
+    margin: 1rem 0.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .cotiza .cotiza__info .cotiza__info-container .cotiza__info-subContainer img {
+    width: 6rem;
+  }
+
+  .cotiza .figura {
+    display: block;
+    position: absolute;
+    width: 19rem;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -9.5rem;
   }
 }
