--- a/style.css
+++ b/style.css
@@ -387,28 +387,36 @@ body {
 
 /*______________________________ Footer ______________________________*/
 .footer {
+  color: #351e97;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  margin: 3rem;
+  margin-top: 3rem;
+}
+
+.footer img {
+  display: block;
+  width: 5rem;
+  height: 5rem;
 }
 
 .footer ul {
-  margin: 0 0.5rem;
+  margin: 0 0.5rem 2rem;
 }
 
 .footer ul li {
   list-style: none;
 }
 
-
-
-/*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*
-  iPad View
-*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*/
-@media screen and (min-width: 768px) {
-
+.footer .redes .redes__container a {
+  display: inline-block;
+  border: 2px solid #351e97;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
 }
+
+
 
 /*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*_*
   Desktop View
